--- a/Ceasar_Cypher/Ceasar_Cypher.vcxproj
+++ b/Ceasar_Cypher/Ceasar_Cypher.vcxproj
@@ -18,6 +18,13 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\Ceasar.cpp" />
+    <ClCompile Include="..\console(v1.8).cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\console(v1.8).h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{ADFBC3FB-CBC3-4FBA-86C9-50A972CD1CCC}</ProjectGuid>
@@ -114,13 +121,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\CeasarCypher\Ceasar.cpp" />
-    <ClCompile Include="..\..\CeasarCypher\console(v1.8).cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\CeasarCypher\console(v1.8).h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
